  - Add route: GET /clothes/repair
  - Add route: PUT /clothes/repair/:code

v0.1.7    Wed, 04 May 2016 12:10:30 +0900
  - 개인정보동의서 수정 (#7)

v0.1.6    Thu, 28 Apr 2016 18:58:17 +0900
  - 공휴일에 반송신청 못하도록 함 (#37)

v0.1.5    Fri, 22 Apr 2016 15:50:38 +0900
  - 안내되는 SMS 내용 수정 (#30, #31)
  - 의류안내 SMS 내용 수정 (#28)

v0.1.4    Thu, 21 Apr 2016 18:57:11 +0900
  - Add helper inch2cm, cm2inch
  - 밑단둘레는 inch 로 입력 (#29)
  - 기증된 의류 숫자로 SMS 안내문구 autofill (#28)
  - "기타" 종류를 새옷으로 등록 할 수 있도록 함 (#23)
  - 사용자등록이 안되는 버그 수정 (#32)

v0.1.3    Fri, 15 Apr 2016 19:21:03 +0900
  - 신발 등록 오류 수정 (#27)
  - 의류코드에 소문자를 허용 (#26)
  - 새로운 사용자로 등록할때 성별도 입력 (#24)
  - 새옷등록 폼에 Enter key 비활성화 (#25)

v0.1.2    Thu, 14 Apr 2016 16:33:50 +0900
  - 자켓의 길이 입력 (#21)
  - 재활용이나 폐기 되는 의류의 바코드 갱신 오류 수정 (#22)

v0.1.1    Mon, 11 Apr 2016 18:10:52 +0900
  - 팬츠의 밑단둘레를 입력 (#19)

v0.1.0    Sun, 10 Apr 2016 16:00:31 +0900
  - Add helper clothes2link
  - Add helper clothes_quantity
  - Add helper generate_discard_code
  - Add helper clothes2text
  - 새옷등록 기능 추가
  - 사용자 검색 기능 추가
  - 새기증 기능 추가
  - 배송대기 목록의 강조 (#16)
  - 반송중 상태의 신청서도 반송운송장을 업데이트 (#12)

v0.0.12    Fri, 25 Mar 2016 18:24:16 +0900
  - 운송장번호를 보여줌 (#14)
  - 목록에서 운송장번호를 clipboard 에 복사하는 버튼 추가 (#11)

v0.0.11    Sat, 12 Mar 2016 14:41:58 +0900
  - 기증안내 이미지 추가 (#9)

v0.0.10    Thu, 10 Mar 2016 11:56:11 +0900
  - 팬츠 대신에 바지/스커트 (#8)
  - 기증안내에 관련된 내용 수정 (#8)
  - SMS 내용변경 (#8)

v0.0.9    Tue, 08 Mar 2016 18:35:36 +0900
  - 동의하지 않거나 재능나눔의 의사가 있는 주문서를 강조

v0.0.8    Wed, 02 Mar 2016 17:55:01 +0900
  - 반납일이 입력되었다면 항상 보여줌
  - 반송일 기준으로 반송신청목록의 정렬
  - 목록에서 반송일을 표시

v0.0.7    Wed, 02 Mar 2016 16:03:49 +0900
  - 반송신청후에 반송일을 표시

v0.0.6    Mon, 29 Feb 2016 19:14:40 +0900
  - 개인정보수집동의서 와 기증메세지 작성 동의

v0.0.5    Mon, 29 Feb 2016 14:59:51 +0900
  - SMS 에서의 반송신청 URL 을 올바르게 수정

v0.0.4    Thu, 25 Feb 2016 19:27:01 +0900
  - 모두 남성으로 보이는 버그 수정
  - 토요일은 반송신청 불가
  - Guide 에서 기증신청서 링크제거
  - 이름만 검색했을때 안나오는 버그 수정
  - 전화번호의 포맷을 010-xxxx-xxxx 로 변경
  - 신청서와 대여이력이 다르다면 알려줌
